--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  shared_preferences: ^0.5.6
+  cached_network_image: ^2.0.0
+  flutter_spinkit: ^2.1.0
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.6
+  google_sign_in: ^3.2.4
+  firebase_core: ^0.4.5
+  firebase_analytics: ^5.0.15
+  rxdart: ^0.20.0
+  flutter_signin_button: ^1.0.0
 
 # Dev dependencies
 dev_dependencies:
@@ -25,6 +35,8 @@ flutter:
     - assets/images/welcome/screen2.png
     - assets/images/welcome/screen3.png
     - assets/images/addisababa_silhouet.png
+    - assets/images/icon_primary_color.png
+    
   fonts:
     - family: Nunito
       fonts:
