--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_analytics: ^5.0.15
   rxdart: ^0.20.0
   flutter_signin_button: ^1.0.0
+  flutter_rating_bar: ^3.0.1+1
 
 # Dev dependencies
 dev_dependencies:
