--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   rxdart: ^0.20.0
   flutter_signin_button: ^1.0.0
   flutter_rating_bar: ^3.0.1+1
+  auto_size_text: ^2.1.0
 
 # Dev dependencies
 dev_dependencies:
