--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_signin_button: ^1.0.0
   flutter_rating_bar: ^3.0.1+1
   auto_size_text: ^2.1.0
+  url_launcher: ^5.7.6
 
 # Dev dependencies
 dev_dependencies:
