--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,11 @@ dependencies:
   flutter_rating_bar: ^3.0.1+1
   auto_size_text: ^2.1.0
   url_launcher: ^5.7.6
-  connectivity: ^0.4.6+2
   dio: ^3.0.8
   equatable: ^1.2.5
   bloc: ^7.0.0
   flutter_bloc:
+  connectivity_plus: ^0.5.0
 # Dev dependencies
 dev_dependencies:
   flutter_test:
