--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,10 @@ dependencies:
   shared_preferences: ^0.5.6
   cached_network_image: ^2.0.0
   flutter_spinkit: ^2.1.0
-  firebase_auth: ^0.16.1
-  cloud_firestore: ^0.13.6
-  google_sign_in: ^3.2.4
-  firebase_core: ^0.4.5
+  firebase_auth: "^0.20.1"
+  cloud_firestore: "^0.16.0+1"
+  google_sign_in: "^4.5.1"
+  firebase_core: "^0.7.0"
   firebase_analytics: ^5.0.15
   rxdart: ^0.20.0
   flutter_signin_button: ^1.0.0
