--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc:
   connectivity_plus: ^0.5.0
+  image_picker: ^0.6.7+22
 # Dev dependencies
 dev_dependencies:
   flutter_test:
