--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   image_picker: ^0.6.7+22
   uuid: ^2.2.2
   awesome_dialog: ^2.1.0
+  sign_in_with_apple: ^2.5.2
+  crypto: ^2.1.5
 # Dev dependencies
 dev_dependencies:
   flutter_test:
