--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   awesome_dialog: ^2.1.0
   sign_in_with_apple: ^2.5.2
   crypto: ^2.1.5
+  carousel_slider: ^4.0.0
 # Dev dependencies
 dev_dependencies:
   flutter_test:
